(18.11.08) 세종과학예술영재학교 졸업논문 양식

--- a/sasa_thesis_form/thesis-example.tex
+++ b/sasa_thesis_form/thesis-example.tex
@@ -4,8 +4,8 @@
 \author[洪吉東]{홍길동}{Hong, Gil Dong} 
 \studentnumber{3311}
 
-\advisor{권현우}{Hyunwoo Kwon}
-\teacher{이예찬}{Yechan Lee}
+\advisor{홍길순}{Gilsoon Hong}
+\teacher{홍길남}{Gilnam Hong}
 \referee[1]{이순신}
 \referee[2]{권율}
 
