--- a/sasa_thesis_form/thesis-example.tex
+++ b/sasa_thesis_form/thesis-example.tex
@@ -1,31 +1,47 @@
-% (18.11.08) 세종과학예술영재학교 졸업논문 양식
-% XeLaTeX로 조판하여야 함!
+% =====================================================================================================
+% 세종과학예술영재학교 졸업논문 양식                                                                            
+% =====================================================================================================
+% XeLaTeX로 조판하여야 합니다!
+% 졸업논문 양식 사용방법에 대해 더 알고 싶거나 궁금한 사항은 세종과학예술영재학교 3기 신주형, 강태원 학생에게 질문해 주시기 바랍니다. 
+% 교내 졸업논문을 TeX 양식으로 사용할 수 있도록 도와주신 권현우님께 진심으로 감사 인사를 전합니다.
+% =====================================================================================================
 
 \documentclass{thesis-SJ}
 
 \title[English title]{논문제목}
+% 논문 제목 [영어제목]{한글제목} 을 기재합니다.
+
 \author[洪吉東]{홍길동}{Hong, Gil Dong} 
+% 저자정보 [한자성명]{성명}{영어성명} 를 기재합니다.
+
 \studentnumber{3311}
+% 저자의 학번을 기재합니다.
 
 \advisor{홍길순}{Gilsoon Hong}
 \teacher{홍길남}{Gilnam Hong}
+% Thesis Advisor와 지도교사 성명을 기재합니다.
+
 \referee[1]{이순신}
 \referee[2]{권율}
+% 심사위원 이름을 기재합니다.
 
 \date{2018년 11월 21일}{November 21st, 2018}
+% 학위청구논문 심사 통과일을 기재합니다.
 
 %\title[Test]{논문제목}
 %\author{Hong, Gil Dong} 
 
 \begin{document}
 	\EnglishAbstract
-	
+	% Abstract(초록) 을 여기서부터 영문으로 작성합니다.
+	% Abstract의 내용은 영문 1000자 미만으로 작성합니다.
 	Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
-	
+
 	\EnglishKeywords{English keywords}
 	
 	\KoreanAbstract
-	
+	% Abstract(초록) 을 여기서부터 한글로 작성합니다.
+	% Abstract의 내용은 국문 600자 미만으로 작성합니다.
 	하수(河水)는 두 산 틈에서 나와 돌과 부딪쳐 싸우며, 그 놀란 파도와 성난 물머리와 우는 여울과 노한 물결과 슬픈 곡조와 원망하는 소리가 굽이쳐 돌면서, 우는 듯, 소리치는 듯, 바쁘게 호령하는 듯, 항상 장성을 깨뜨릴 형세가 있어, 전차(戰車) 만승(萬乘)과 전기(戰騎) 만대(萬隊)나 전포(戰砲) 만가(萬架)와 전고(戰鼓) 만좌(滿座)로써는 그 무너뜨리고 내뿜는 소리를 족히 형용할 수 없을 것이다. 모래 위에 큰 돌은 홀연히 떨어져 섰고, 강 언덕에 버드나무는 어둡고 컴컴하여 물지킴과 하수 귀신이 다투어 나와서 사람을 놀리는 듯한데, 좌우의 교리(蛟　)가 붙들려고 애쓰는 듯싶었다.
 	
 	\KoreanKeywords{Korean keywords}
@@ -33,6 +49,8 @@
 	\tableofcontents
 	
 	\mainpartstart
+	
+	% ===================== 여기서부터 논문을 작성하시면 됩니다. ===================== 
 	
 	\chapter{Introduction} 
 	
@@ -48,6 +66,5 @@
 		Write figure in this way. 
 		\caption{Test}
 	\end{figure}
-
-
+	
 \end{document}
