Reference 항목 추가

--- a/sasa_thesis_form/thesis-example.tex
+++ b/sasa_thesis_form/thesis-example.tex
@@ -67,4 +67,30 @@
 		\caption{Test}
 	\end{figure}
 	
+	% =======================================================================
+	
+% ===================== 여기서부터 참고 문헌을 작성하시면 됩니다. ===================== 
+\begin{thebibliography}{10}
+	\bibitem{1}
+	Chang, I. (2010). “Biopolymer treated Korean Residual Soil: Geotechnical behavior and Applications”,  Ph.D. Thesis, Korea Advanced Institute of Science and Technology, Daejeon, Republic of Korea, 320 pages.
+	
+	% 단행본(Book)의 예시
+	\bibitem{2}
+	Grim, R. (1962). Applied clay mineralogy, McGraw-Hill, NewYork, 160 pages.
+	
+	% 특허(Patents)의 경우 예시
+	\bibitem{3}
+	J.L. Lee et al. (1998). "GaAs Power Semiconductor Device Operating at a Low Voltage and Method for Fabricating the Same", US Patent 5, 760, 418, to ETRI, Patent and Trademark Office, Washington D.C., 1998.
+	
+	% 학회논문(Conference proceeding)의 경우 예시
+	\bibitem{4}
+	Mgangira, M.B. (2009). "Evaluation of the effects of enzyme-based liquid chemical stabilizers on subgrade soils." 28th Annual Southern African Transport Conference (SATC) 2009, Pretoria, South Africa, pp. 192-199.
+	
+	% 저널아티클(Periodicals)의 경우 예시
+	\bibitem{5}
+	Noborio, K., McInnes, K. J., and Heilman, J. L. (1996). "Measurements of Soil Water Content, Heat Capacity, and Thermal Conductivity With A Single Tdr Probe1."  Soil Science, 161(1), pp. 22-28.
+	
+\end{thebibliography}
+% =======================================================================
+	
 \end{document}
