(19.04.10) 세종과학예술영재학교 졸업논문 양식

--- a/sasa_thesis_form/thesis-example.tex
+++ b/sasa_thesis_form/thesis-example.tex
@@ -1,10 +1,10 @@
-% =====================================================================================================
+% ==============================================================
 % 세종과학예술영재학교 졸업논문 양식                                                                            
-% =====================================================================================================
+% ==============================================================
 % XeLaTeX로 조판하여야 합니다!
 % 졸업논문 양식 사용방법에 대해 더 알고 싶거나 궁금한 사항은 세종과학예술영재학교 3기 신주형, 강태원 학생에게 질문해 주시기 바랍니다. 
 % 교내 졸업논문을 TeX 양식으로 사용할 수 있도록 도와주신 권현우님께 진심으로 감사 인사를 전합니다.
-% =====================================================================================================
+% ==============================================================
 
 \documentclass{thesis-SJ}
 
@@ -50,7 +50,7 @@
 	
 	\mainpartstart
 	
-	% ===================== 여기서부터 논문을 작성하시면 됩니다. ===================== 
+	% ================ 여기서부터 논문을 작성하시면 됩니다. ================ 
 	
 	\chapter{Introduction} 
 	
@@ -67,9 +67,9 @@
 		\caption{Test}
 	\end{figure}
 	
-	% =======================================================================
+	% ============================================================
 	
-% ===================== 여기서부터 참고 문헌을 작성하시면 됩니다. ===================== 
+% ================ 여기서부터 참고 문헌을 작성하시면 됩니다. =================
 \begin{thebibliography}{10}
 	\bibitem{1}
 	Chang, I. (2010). “Biopolymer treated Korean Residual Soil: Geotechnical behavior and Applications”,  Ph.D. Thesis, Korea Advanced Institute of Science and Technology, Daejeon, Republic of Korea, 320 pages.
@@ -91,6 +91,6 @@
 	Noborio, K., McInnes, K. J., and Heilman, J. L. (1996). "Measurements of Soil Water Content, Heat Capacity, and Thermal Conductivity With A Single Tdr Probe1."  Soil Science, 161(1), pp. 22-28.
 	
 \end{thebibliography}
-% =======================================================================
+% ==============================================================
 	
 \end{document}
